@@ -29,6 +29,7 @@ object DigIt_Progress: TDigIt_Progress
       Top = 40
       Width = 300
       Smooth = True
+      Step = 1
       TabOrder = 0
     end
     object capTotal: TLabel
@@ -82,6 +83,7 @@ object DigIt_Progress: TDigIt_Progress
       Top = 17
       Width = 300
       Smooth = True
+      Step = 1
       TabOrder = 0
     end
     object capCurrent: TLabel
