@@ -57,7 +57,7 @@
 {"hash":44176496,"name":"tdigit_main.btprotate180.hint","sourcebytes":[82,111,116,97,116,101,32,49,56,48,194,176],"value":"Rotate 180\u00B0"},
 {"hash":237875683,"name":"tdigit_main.rollpages.button.caption","sourcebytes":[67,97,112,116,117,114,101,100,32,80,97,103,101,115],"value":"Captured Pages"},
 {"hash":142372388,"name":"tdigit_main.tbcaptured.caption","sourcebytes":[116,98,67,97,112,116,117,114,101,100],"value":"tbCaptured"},
-{"hash":371876,"name":"tdigit_main.tbcapturedpdf.caption","sourcebytes":[84,101,115,116],"value":"Test"},
+{"hash":191249830,"name":"tdigit_main.tbcapturedpdf.caption","sourcebytes":[69,120,112,111,114,116,32,116,111,32,80,68,70],"value":"Export to PDF"},
 {"hash":14211139,"name":"tdigit_main.rollcounters.button.caption","sourcebytes":[80,97,103,101,32,67,111,117,110,116,101,114,115],"value":"Page Counters"},
 {"hash":209958762,"name":"tdigit_main.bclabel7.caption","sourcebytes":[86,97,108,117,101,32,58],"value":"Value :"},
 {"hash":88618810,"name":"tdigit_main.bclabel12.caption","sourcebytes":[78,97,109,101,32,58],"value":"Name :"},
